2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* database.cc: mention that it could be the filesystem that
	is full in the SQLITE_FULL error message

2005-04-16  Derek Scherger  <derek@echologic.com>

	* work.cc (known_preimage_path): rename to...
	(known_path): this, since it's image agnostic
	(build_deletions): update for renamed function
	(build_rename): ensure rename source exists in current revision
	and rename target does not exist in current revision

	* tests/t_no_rename_overwrite.at: un-XFAIL 

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* app_state.{cc,hh} (set_author, set_date): New methods.
	* cert.cc (cert_revision_date): Rename to...
	(cert_revision_date_time): ...an overloaded version of this.
	(cert_revision_author_default): Check app.date.
	* cert.hh: Expose cert_revision_date_time.
	* commands.cc (commit): Handle --date.
	* main.cc: Parse --date and --author options.
	* monotone.1: Document --date, --author.
	* monotone.texi (Working Copy, OPTIONS): Likewise.

	* tests/t_override_author_date.at: New test.
	* testsuite.at: Add it.
	
	This commit heavily based on a patch by Markus Schiltknecht
	<markus@bluegap.ch>.
	
2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Fixup after merge.

2005-04-17  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.cc: Fix warnings: add missing initializers.
	* netsync.cc: Fix warnings: inline static vs static inline.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_update_nonexistent.at: New test.
	* testsuite.at: Add it.
	
	* commands.cc (update): Verify that user's requested revision
	exists.

2005-04-16  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Fixup after merge.

2005-04-16  Emile Snyder <emile@alumni.reed.edu>

	* tests/t_add_vs_commit.at: New test for failing case.  If you
	add a file in you working dir, someone else adds the same file
	and commits, then you do an update it messes up your working
	directory.
	* testsuite.at: Add it.
	